<resources>
    <string name="app_name">Citisnap</string>
    <string name="logo">logo</string>
    <string name="tagline">Contribute to a better change</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_to_register">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="email_error">Email is not allowed to be empty</string>
    <string name="empty_pass_error">Password not allowed to be empty</string>
    <string name="error_login">Invalid email or password</string>
    <string name="tagline_2">Express Your Aspirations and Complaints</string>
    <string name="full_name">Full Name</string>
    <string name="register_to_login">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="add_post">Add Post</string>
    <string name="notifications">Notifications</string>
    <string name="profil">Profile</string>
    <string name="search">Search</string>
    <string name="profil_picture">Profile Picture</string>
    <string name="post_image">Post Image</string>
    <string name="filter">Filter</string>
    <string name="sign_up">Sign Up</string>
    <string name="name_error">Name is not allowed to be empty</string>
    <string name="sign_in">Sign In</string>
    <string name="next">Next</string>
    <string name="username_already_exist">Username already exist</string>
    <string name="username_error">Username not allowed to be empty</string>
    <string name="username">Username</string>
    <string name="password_long">Password must be at least 8 characters long</string>
    <string name="back_button">Back Button</string>
    <string name="camera">Camera</string>
    <string name="hint_post">Tell us something!</string>
    <string name="post">Post</string>
    <string name="profile_pict"><![CDATA[https://firebasestorage.googleapis.com/v0/b/c23-pc676-capstone-project.appspot.com/o/profile_picture.png?alt=media&token=7fdc2193-9de5-4ad1-a312-0304541d6ebd]]></string>
    <string name="thread">Thread</string>
    <string name="description">Description</string>
    <string name="vote_up">Votes Up</string>
    <string name="vote_down">Votes down</string>
    <string name="vote">Votes</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="send">SEND</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="be_the_first_to_comment">Be the first to comment</string>
    <string name="tab_layout_urgent">Urgent</string>
    <string name="tab_layout_recent">Recent</string>
    <string name="must_be_resolved">Must be resolved</string>
    <string name="urgent">Urgent</string>
    <string name="no_posts_yet">No Posts Yet</string>
    <string name="aspiration">Aspiration</string>
    <string name="good_aspiration">Good aspirations</string>
    <string name="common">Common</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="save_changes">Save Changes</string>
    <string name="post_and_provide_feedback_to_the_government">Post and Provide Feedback to the Government</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="coming_soon">Coming soon</string>
</resources>