<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.UsernameRegisterActivity">

    <TextView
        android:id="@+id/title"
        style="@style/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:fontFamily="@font/poppins_semi"
        android:text="@string/tagline_2"
        android:textSize="28sp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="30dp"
        android:hint="@string/username"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteX="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLayout">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/check"
            style="@style/button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/next" />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>