<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:cardCornerRadius="25dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photoProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/ic_launcher" />

            <androidx.cardview.widget.CardView
                style="@style/card_secondary"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                app:cardCornerRadius="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <ImageView
                        android:id="@+id/camera"
                        style="@style/backgroundTint"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:background="@drawable/camera"
                        android:contentDescription="@string/camera" />

                    <ImageView
                        android:id="@+id/gallery"
                        style="@style/backgroundTint"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/camera"
                        android:background="@drawable/gallery"
                        android:contentDescription="@string/camera" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/photoProfile"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/post_image"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:visibility="gone" />

            <EditText
                android:id="@+id/description"
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/photo"
                android:layout_marginTop="20dp"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/poppins"
                android:hint="@string/hint_post"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/post"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/post" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>