<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/profileInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@color/gray_light" />

            <TextView
                android:id="@+id/name"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textStyle="bold"
                android:layout_toEndOf="@id/profileImage"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/rlUrgency"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_toEndOf="@id/name"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_background"
                android:backgroundTint="@color/red">

                <TextView
                    android:id="@+id/urgency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCard"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="10dp"
            android:visibility="gone"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileInfo">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/post_image"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/desc"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:ellipsize="end"
            android:maxLines="15"
            android:fontFamily="@font/roboto"
            app:layout_constraintBottom_toTopOf="@+id/icon_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageCard" />

        <RelativeLayout
            android:id="@+id/icon_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                style="@style/up_votes"
                android:id="@+id/actionUp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:clickable="true"
                android:contentDescription="@string/vote_up"
                android:focusable="true" />

            <TextView
                android:id="@+id/vote_up_count"
                style="@style/text"
                android:layout_toEndOf="@id/actionUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/actionUp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/roboto"
                android:visibility="visible" />


            <ImageView
                style="@style/down_votes"
                android:id="@+id/actionDown"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/actionUp"
                android:clickable="true"
                android:contentDescription="@string/vote_down"
                android:focusable="true"/>

            <ImageView
                style="@style/comment"
                android:id="@+id/comment"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@id/actionDown"
                android:clickable="true"
                android:contentDescription="@null"
                android:focusable="true" />


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>